[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/development_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/DroidSansFallback.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[node name="development_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="v" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.5
margin_bottom = 24.5

[node name="action_editor" type="Button" parent="v"]
margin_right = 1024.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Action editor"

[node name="opportunity_editor" type="Button" parent="v"]
margin_top = 51.0
margin_right = 1024.0
margin_bottom = 98.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Opportunity editor"

[node name="AI" type="Button" parent="v"]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 149.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "AI"

[node name="furniture_layout" type="Button" parent="v"]
margin_top = 153.0
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Furniture Layout Editor"

[node name="main_menu" type="Button" parent="v"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 251.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Main menu"
